# Blockchain-email

./: README.md
backend/: Cargo.toml
backend/src/: cli.rs  commands.rs  main.rs
backend/src/commands/: BlockchainEmail.json  blockchain_email.rs
smart-contracts/: Makefile
smart-contracts/script/: DeployBlockchainEmail.s.sol
smart-contracts/src/: BlockchainEmail.sol  EC.sol
