[package]
name = "blockchain-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]  }
serde_json = "1.0.89"
aes-gcm-siv = "0.11.1"
ecies = {version = "0.2.6", features = ["std"]}
hex = "0.4"
libsecp256k1 = "0.7.1"
clap = { version = "4.4.8", features = ["derive"] }
byteorder = "1.5.0"
colored = "2.0"
chrono = "0.4"
term_size = "0.3.2"